Commit data cleaning 1.5

--- a/sgx_data_cleaning.ipynb
+++ b/sgx_data_cleaning.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "[605 rows x 3132 columns]"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "[605 rows x 3132 columns]"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "[1880945 rows x 6 columns]"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1622,7 @@
        "[13310 rows x 163 columns]"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2141,7 @@
        "[13310 rows x 155 columns]"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
        "18  2022        6.121060"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
        "[13310 rows x 156 columns]"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2808,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +2950,7 @@
        "[5440 rows x 5 columns]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2962,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3116,7 +3116,7 @@
        "[5440 rows x 6 columns]"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3315,7 +3315,7 @@
        "20   5191  2023                   3.617463"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3330,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3781,7 +3781,7 @@
        "[13310 rows x 158 columns]"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3802,7 +3802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3968,7 +3968,7 @@
        " 'Singapore Interbank Rates']"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3979,7 +3979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4016,7 +4016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4050,7 +4050,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4063,7 +4063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4436,7 +4436,7 @@
        "[13310 rows x 25 columns]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4480,7 +4480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -4853,7 +4853,7 @@
        "[12694 rows x 25 columns]"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4876,7 +4876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4885,7 +4885,7 @@
        "577"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4898,7 +4898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4932,7 +4932,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4945,7 +4945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4961,7 +4961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5334,7 +5334,7 @@
        "[12694 rows x 25 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5353,9 +5353,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          0\n",
+       "1          0\n",
+       "2          0\n",
+       "3          0\n",
+       "4          0\n",
+       "        ... \n",
+       "12689    576\n",
+       "12690    576\n",
+       "12691    576\n",
+       "12692    576\n",
+       "12693    576\n",
+       "Name: Company Code, Length: 12694, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Encode Companies with a unique numeric identifier\n",
     "\n",
@@ -5365,7 +5387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -5385,7 +5407,7 @@
        "Name: NACE, Length: 12694, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5399,7 +5421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -5419,7 +5441,7 @@
        "Name: DA, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5433,7 +5455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -5453,7 +5475,7 @@
        "Name: MCAP, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5467,7 +5489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -5487,7 +5509,7 @@
        "Name: SIZE, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5501,7 +5523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -5521,7 +5543,7 @@
        "Name: PROFITABILITY, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5535,7 +5557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5555,7 +5577,7 @@
        "Name: TANG, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5569,7 +5591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5589,7 +5611,7 @@
        "Name: RISK, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5603,7 +5625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -5623,7 +5645,7 @@
        "Name: LIQUID, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5637,7 +5659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5657,7 +5679,7 @@
        "Name: NDTSHIELD, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5671,7 +5693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5691,7 +5713,7 @@
        "Name: INTEX, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5705,7 +5727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -5725,7 +5747,7 @@
        "Name: TAXRATE, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5739,7 +5761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5759,7 +5781,7 @@
        "Name: FCFF, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5773,7 +5795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -5793,7 +5815,7 @@
        "Name: GROWPOT, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5807,7 +5829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -5827,7 +5849,7 @@
        "Name: LEVERAGE, Length: 12694, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5841,7 +5863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -5872,6 +5894,7 @@
        "NEMP              2169\n",
        "SORA             12117\n",
        "CPI              10963\n",
+       "Company Code     12694\n",
        "SIZE              8810\n",
        "PROFITABILITY     8779\n",
        "TANG              8509\n",
@@ -5885,7 +5908,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5898,7 +5921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5914,7 +5937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -6228,7 +6251,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12694 rows × 35 columns</p>\n",
+       "<p>12694 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -6284,10 +6307,10 @@
        "12692  1.973997   0.006430 -0.009926  7.914128e+06  1.064274  0.281875  \n",
        "12693  1.760354   0.005402 -0.159992 -1.542187e+06  1.384095  0.315184  \n",
        "\n",
-       "[12694 rows x 35 columns]"
+       "[12694 rows x 36 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6299,7 +6322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -6613,7 +6636,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4616 rows × 35 columns</p>\n",
+       "<p>4616 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -6669,10 +6692,10 @@
        "12691  1.136334   0.006426  0.072592  2.927900e+06  2.491582  0.530091  \n",
        "12692  1.973997   0.006430 -0.009926  7.914128e+06  1.064274  0.281875  \n",
        "\n",
-       "[4616 rows x 35 columns]"
+       "[4616 rows x 36 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6688,7 +6711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -6719,6 +6742,7 @@
        "NEMP             288.552189\n",
        "SORA               0.000000\n",
        "CPI                0.000000\n",
+       "Company Code       0.000000\n",
        "SIZE               9.228585\n",
        "PROFITABILITY      9.409813\n",
        "TANG              14.854441\n",
@@ -6732,7 +6756,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6745,7 +6769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -7059,7 +7083,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4616 rows × 33 columns</p>\n",
+       "<p>4616 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -7115,10 +7139,10 @@
        "12691  1.136334   0.006426  0.072592  2.927900e+06  2.491582  0.530091  \n",
        "12692  1.973997   0.006430 -0.009926  7.914128e+06  1.064274  0.281875  \n",
        "\n",
-       "[4616 rows x 33 columns]"
+       "[4616 rows x 34 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7132,7 +7156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -7446,7 +7470,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1728 rows × 33 columns</p>\n",
+       "<p>1728 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -7502,10 +7526,10 @@
        "1726   0.078202 -0.002244  2.717399e+07  0.317394  0.448953  \n",
        "1727   0.082164  0.002840  3.845589e+07  0.309159  0.458124  \n",
        "\n",
-       "[1728 rows x 33 columns]"
+       "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7522,7 +7546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -7543,7 +7567,7 @@
        "Length: 216, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7563,7 +7587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -7877,7 +7901,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>648 rows × 33 columns</p>\n",
+       "<p>648 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -7933,10 +7957,10 @@
        "1726 -0.002244  2.717399e+07  0.317394  0.448953  \n",
        "1727  0.002840  3.845589e+07  0.309159  0.458124  \n",
        "\n",
-       "[648 rows x 33 columns]"
+       "[648 rows x 34 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7952,7 +7976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -8266,7 +8290,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1080 rows × 33 columns</p>\n",
+       "<p>1080 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -8322,10 +8346,10 @@
        "1723   0.062545 -0.302336 -1.035043e+07  0.402061  0.263116  \n",
        "1724   0.071469 -0.099419  4.195210e+07  0.410953  0.357901  \n",
        "\n",
-       "[1080 rows x 33 columns]"
+       "[1080 rows x 34 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8346,7 +8370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
