Commit Non-Robust Pooled OLS Model

--- a/sgx_pooled_ols.ipynb
+++ b/sgx_pooled_ols.ipynb
@@ -41,9 +41,9 @@
       "text/plain": [
        "Index(['Company', 'NACE', 'Year', 'TA', 'CA', 'FA', 'TL', 'CL', 'DEBT',\n",
        "       'TAXEX', 'INTEX', 'TE', 'PROFIT', 'SALES', 'EBITDA', 'EBIT', 'DA',\n",
-       "       'CFO', 'CAPEX', 'MCAP', 'SOLV', 'SORA', 'CPI', 'SIZE', 'PROFITABILITY',\n",
-       "       'TANG', 'RISK', 'LIQUID', 'NDTSHIELD', 'TAXRATE', 'FCFF', 'GROWPOT',\n",
-       "       'LEVERAGE'],\n",
+       "       'CFO', 'CAPEX', 'MCAP', 'SOLV', 'SORA', 'CPI', 'Company Code', 'SIZE',\n",
+       "       'PROFITABILITY', 'TANG', 'RISK', 'LIQUID', 'NDTSHIELD', 'TAXRATE',\n",
+       "       'FCFF', 'GROWPOT', 'LEVERAGE'],\n",
        "      dtype='object')"
       ]
      },
@@ -402,7 +402,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1728 rows × 31 columns</p>\n",
+       "<p>1728 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -490,7 +490,7 @@
        "                          2021.0 -0.002244  2.717399e+07  0.317394  0.448953  \n",
        "                          2022.0  0.002840  3.845589e+07  0.309159  0.458124  \n",
        "\n",
-       "[1728 rows x 31 columns]"
+       "[1728 rows x 32 columns]"
       ]
      },
      "execution_count": 3,
@@ -581,8 +581,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3632\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4300\n",
       "No. Observations:                1728   R-squared (Within):               0.0580\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3632\n",
-      "Time:                        01:22:13   Log-likelihood                    283.56\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3632\n",
+      "Time:                        00:42:21   Log-likelihood                    283.56\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      81.520\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -670,8 +670,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3632\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4300\n",
       "No. Observations:                1728   R-squared (Within):               0.0579\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3632\n",
-      "Time:                        01:22:13   Log-likelihood                    283.55\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3632\n",
+      "Time:                        00:42:22   Log-likelihood                    283.55\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      88.983\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -758,8 +758,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3632\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4296\n",
       "No. Observations:                1728   R-squared (Within):               0.0595\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3632\n",
-      "Time:                        01:22:13   Log-likelihood                    283.46\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3632\n",
+      "Time:                        00:42:22   Log-likelihood                    283.46\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      97.910\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -843,8 +843,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3631\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4297\n",
       "No. Observations:                1728   R-squared (Within):               0.0584\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3631\n",
-      "Time:                        01:22:13   Log-likelihood                    283.36\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3631\n",
+      "Time:                        00:42:23   Log-likelihood                    283.36\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      108.82\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -927,8 +927,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3628\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4297\n",
       "No. Observations:                1728   R-squared (Within):               0.0570\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3628\n",
-      "Time:                        01:22:13   Log-likelihood                    283.04\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3628\n",
+      "Time:                        00:42:23   Log-likelihood                    283.04\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      122.37\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -1008,8 +1008,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3626\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4301\n",
       "No. Observations:                1728   R-squared (Within):               0.0538\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3626\n",
-      "Time:                        01:22:14   Log-likelihood                    282.68\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3626\n",
+      "Time:                        00:42:24   Log-likelihood                    282.68\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      139.77\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -1087,8 +1087,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3621\n",
       "Estimator:                  PooledOLS   R-squared (Between):              0.4292\n",
       "No. Observations:                1728   R-squared (Within):               0.0550\n",
-      "Date:                Sat, Mar 30 2024   R-squared (Overall):              0.3621\n",
-      "Time:                        01:22:14   Log-likelihood                    282.02\n",
+      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3621\n",
+      "Time:                        00:42:24   Log-likelihood                    282.02\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      162.81\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -1141,6 +1141,22 @@
    "metadata": {},
    "source": [
     "All variables in the model are highly significant (F = 162.81). Model should not be refined further via dropping of variables, and we shall proceed with this model specification as the based of all further model estimates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving Non-Robust Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_pickle(obj= pooled_res, fname= 'model/pooled_ols.pickle')"
    ]
   },
   {
